# qwen-markel_tts

./: .dockerignore  API.md  ARCHITECTURE.md  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCUMENTATION.md  Dockerfile  MISSING_PIECES.md  Makefile  QUICKREF.md  QUICKSTART.md  README.md  SECURITY.md  SETUP.md  SETUP_GUIDE.md  SUBMISSION.md  WEB_UI.md  docker-compose.yml  pyproject.toml
docs/: AUDIO_RECORDING.md  BENCHMARK_AUDIT.md  BENCHMARK_QUICKSTART.md  KERNEL_CHANGES.md  TROUBLESHOOTING_422.md  benchmark_30_requests.json  implementation_audit_2026-05-15.md
docs/audit/: benchmark_audit_20260515_094305.json  benchmark_audit_20260515_094431.json  benchmark_audit_20260515_094618.json  benchmark_audit_20260515_094759.json  benchmark_summary_20260515_094305.json  benchmark_summary_20260515_094431.json  benchmark_summary_20260515_094618.json  benchmark_summary_20260515_094759.json
scripts/: .env_loader.py  benchmark.py  benchmark_extended.py  build.sh  cli.py  deepgram_sample.py  deepgram_smoke.py  demo.py  demo_system.sh  generate_samples.py  run_demo.sh  run_server.sh  run_with_recording.sh  simple_stt_test.py  test_imports.py  web_demo.py
scripts/static/: index.html
src/megakernel/: __init__.py  adapter.py
src/pipecat_adapter/: __init__.py  audio_recorder.py  deepgram_stt.py  tts.py
src/qwen3_tts/: __init__.py  decoder.py  loader.py  vocoder.py
src/qwen_markel_tts.egg-info/: PKG-INFO  SOURCES.txt  (+2 more)
tests/: conftest.py  test_decoder.py  test_loader.py  test_megakernel_adapter.py  test_pipecat_adapter.py  test_server.py  test_vocoder.py
(+2 files in other folders)
